src/PostPage/PostPage.css
.post-page-main-div{
    width: 82vw;
    margin: auto;
    display: flex;
    flex-direction: column;
    justify-content: center;
    position: relative;
}
.post-page-header-div{
    width: 82vw;
    height: 68px;
    display: flex;
    justify-content: space-between;
    align-items: baseline;
}
.mobile-menu{
    display: none;
}
.post-page-brand{
    color: #1E2742;
    font-family: Arial, Helvetica, sans-serif;
    font-size: clamp(24px,2.01vw,36px);
    font-weight: bold;
}
.no-underline{
    cursor: pointer;
    text-decoration: none;
}
.post-page-header-elements{
    display: flex;
    flex-direction: row;
    width: clamp(300px, 34vw, 600px);
}
.post-page-list-div{
    width: clamp(300px,23vw,600px);
    margin-right: 30px;
}
.post-page-header-list{
    list-style: none;
    padding: 0;
    display: flex;
    font-family: Arial, Helvetica, sans-serif;
    font-weight: bold;
    font-size: clamp(12px,1.12vw,20px);
    color: #6D7D8B;
    justify-content: space-between;
    text-decoration: underline;
}
li:hover{
    color: black;
    cursor: pointer;
    text-decoration: underline black;
}
.post-page-header-btn-div{
    width: clamp(110px,8.9vw,140px);
    height: 40px;
}
.post-page-header-btn{
    cursor: pointer;
    width: clamp(80px, 8.9vw, 140px);
    height: 100%;
    border: none;
    outline: rgb(78, 87, 253) 2px solid;
    border-radius: 4px;
    background-color: hsl(212, 98%, 65% , .1);
    color: #4DA0FD;
    font-size: clamp(12px, 1.12vw, 20px);
    font-weight: bold;
    font-family: Arial, Helvetica, sans-serif;
}
.post-page-title{
    width: clamp(300px,48.62vw,900px);
    margin: auto;
    height: clamp(100px,16.67vw,260px);
    display: flex;
    flex-direction: column;
}
.post-page-title-p-div{
    height: clamp(80px,11.12vw,180px);
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
}
.post-page-title-p{
    font-family: Arial, Helvetica, sans-serif;
    font-weight: bold;
    font-size: clamp(24px,3.34vw,56px);
    color: #25313C;
    margin: 0;
}
.post-page-title-info{
    display: flex;
    width: 100%;
    height: 56px;
    align-items:  center;
}
.post-page-title-avatar{
    width: clamp(30px,3.9vw,66px);
    height: clamp(30px, 3.9vw, 66px);
    margin-right: 16px;
    border-radius: 50%;
}
.post-page-author-name{
    color: #6D7D8B;
    font-family: Arial, Helvetica, sans-serif;
    font-weight: bold;
    font-size: clamp(10px,.98vw,18px);
    margin-right: 29px;
}
.post-page-info-spacer{
    margin-right: 29px;
}
.post-page-info-date{
    color: #6D7D8B;
    font-family: Arial, Helvetica, sans-serif;
    font-weight: bold;
    font-size: clamp(10px, .98vw, 18px);
}
.post-page-pic-div{
    width: clamp(300px,62.5vw,1100px);
    height: clamp(180px, 31.25vw, 600px);
    margin: auto;
    display: flex;
}
.post-page-pic{
    width: clamp(300px, 62.5vw, 1100px);
    object-fit: cover;
}
.post-page-post-text-div{
    width: clamp(280px,48.62vw,900px);
    margin: auto;
}
.post-page-post-text{
    margin: 0;
    font-family: Arial, Helvetica, sans-serif;
    font-size: clamp(12px,1.25vw,22px);
    text-align: left;
    line-height: 160%;
}
.post-page-post-footer-div{
    height: 80px;
    width: clamp(280px, 48.7vw, 900px);
    padding-left: 12px;
    margin: auto;
    display: flex;
}
.post-page-footer-pic-div{
    box-sizing: border-box;
    width: clamp(24px, 3.9vw, 66px);
    height: clamp(24px, 3.9vw, 66px);
    padding-top: 4px;
    margin-right: 16px;
}
.post-page-footer-pic{
    width: clamp(24px, 3.9vw, 66px);
    height: clamp(24px, 3.9vw, 66px);
    border-radius: 50%;
}
.post-page-footer-info{
    display: flex;
    flex-direction: column;
    align-items: start;
}
.post-page-footer-written{
    color: #1E2742;
    font-size: clamp(10px,.98vw,18px);
    font-family: Arial, Helvetica, sans-serif;
    margin: 0;
}
.post-page-footer-author{
    color: #25313C;
    font-family: Arial, Helvetica, sans-serif;
    font-size: clamp(20px,1.67vw,30px);
    margin: 0;
    margin-bottom: 8px;
}
.post-page-footer-job{
    margin: 0;
    color: #989898;
    font-size: clamp(10px, .98vw, 18px);
    font-family: Arial, Helvetica, sans-serif;
}
.footer-spacer{
    width: 48.7vw;
    margin: auto;
    height: 1px;
    background-color: hsl(208, 12%, 49%,.22);
    border: none;
}
.comment-section{
    width: clamp(280px,48.7vw,900px);
    margin: auto;
    display: flex;
    flex-direction: column;
    align-items: start
}
.comment-invitation-div{
    margin-bottom: 12px;
}
.comment-invitation{
    margin: 0;
    color: #6D7D8B;
    font-family: Arial, Helvetica, sans-serif;
    font-size: clamp(20px,1.67vw,30px);
}
.new-comment-div{
    display: flex;
    flex-direction: row;
    height: 150px;
    width: clamp(280px, 48.7vw, 900px);
}
.new-comment-pic{
    width: clamp(24px, 3.9vw, 66px);
    height: clamp(24px, 3.9vw, 66px);
    margin-right: 16px;
    border-radius: 50%;
}
.new-comment-input{
    padding-left: 16px;
    padding-bottom: 104px;
    margin: 0;
    height: 148px;
    width: clamp(240px,43.75vw,800px);
    box-sizing: border-box;
    border: none;
    outline: 1px solid #BBC8D4;
    border-radius: 4px;
}
.open-mobile-list{
    display: none;
}
.mobile-list{
    display: none;
}

@media screen and (max-width:480px) {
.post-page-header-div{
    display: none;
}
.post-page-header-elements{
    display: none;
}
}

